# ffmpeg_example

./: .gitattributes  .gitignore  CMakeLists.txt  build.sh
FFmpeg_example/: main.cpp
cmake/: Findavcodec.cmake
include/libavutil/: ffversion.h
lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
src/: main.cpp
